force-app/main/default/objects/Managed_Service_Bill__c/Managed_Service_Bill__c.object-meta.xml
<CustomObject>
    <label>Managed Service Bill</label>
    <nameField>
        <label>Managed Service Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managed Service Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>