force-app/main/default/objects/Managed_Service_Bill__c/fields/Billable_CPM_Rte__c.field-meta.xml
<CustomField>
    <fullName>Billable_CPM_Rte__c</fullName>
    <label>Billable CPM Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>