force-app/main/default/objects/Managed_Service_Bill__c/fields/Billable_Delivery_Unit__c.field-meta.xml
<CustomField>
    <fullName>Billable_Delivery_Unit__c</fullName>
    <label>Billable Delivery Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>