force-app/main/default/objects/Managed_Service_Bill__c/fields/Billable_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Billable_Revenue__c</fullName>
    <label>Billable Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>