force-app/main/default/objects/Managed_Service_Bill__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <label>Billing Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>