force-app/main/default/objects/Managed_Service_Bill__c/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <label>Campaign Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>