force-app/main/default/objects/Managed_Service_Bill__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <label>Cost Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>