force-app/main/default/objects/Managed_Service_Bill__c/fields/Creative_Alternative_Id__c.field-meta.xml
<CustomField>
    <fullName>Creative_Alternative_Id__c</fullName>
    <label>Creative Alternative Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>