force-app/main/default/objects/Managed_Service_Bill__c/fields/CSM_Name__c.field-meta.xml
<CustomField>
    <fullName>CSM_Name__c</fullName>
    <label>CSM Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>