force-app/main/default/objects/Managed_Service_Bill__c/fields/Delivered_Units__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Units__c</fullName>
    <label>Delivered Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>