force-app/main/default/objects/Managed_Service_Bill__c/fields/Impressions_Served__c.field-meta.xml
<CustomField>
    <fullName>Impressions_Served__c</fullName>
    <label>Impressions Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>