force-app/main/default/objects/Managed_Service_Bill__c/fields/Invoice_Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item_Description__c</fullName>
    <label>Invoice Line Item Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>