force-app/main/default/objects/Managed_Service_Bill__c/fields/Invoice_Memo_Title__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Memo_Title__c</fullName>
    <label>Invoice Memo Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>