force-app/main/default/objects/Managed_Service_Bill__c/fields/IO_Number__c.field-meta.xml
<CustomField>
    <fullName>IO_Number__c</fullName>
    <label>IO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>