force-app/main/default/objects/Managed_Service_Bill__c/fields/Line_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Name__c</fullName>
    <label>Line Item Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>