force-app/main/default/objects/Managed_Service_Bill__c/fields/Placement_Name__c.field-meta.xml
<CustomField>
    <fullName>Placement_Name__c</fullName>
    <label>Placement Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>