force-app/main/default/objects/Managed_Service_Bill__c/fields/Primary_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Address__c</fullName>
    <label>Primary Billing Address</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>