force-app/main/default/objects/Managed_Service_Bill__c/fields/Primary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Contact__c</fullName>
    <label>Primary Billing Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>