force-app/main/default/objects/Managed_Service_Bill__c/fields/Primary_Billing_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billing_Phone__c</fullName>
    <label>Primary Billing Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>