force-app/main/default/objects/Managed_Service_Bill__c/fields/Secondary_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Billing_Email__c</fullName>
    <label>Secondary Billing Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>