force-app/main/default/objects/Managed_Service_Bill__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <label>Seller Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>