force-app/main/default/objects/Managed_Service_Bill__c/fields/SFDC_Prooduct_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Prooduct_Name__c</fullName>
    <label>SFDC Prooduct Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>