force-app/main/default/objects/Managed_Service_Bill__c/fields/Spend_Done__c.field-meta.xml
<CustomField>
    <fullName>Spend_Done__c</fullName>
    <label>Spend Done</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>