force-app/main/default/objects/Managed_Service_Bill__c/fields/Spend_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Spend_Remaining__c</fullName>
    <label>Spend Remaining</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>